# libscep

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.am.docs  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  gcov.m4
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
cmake/: FindCheck.cmake
docs/: Makefile  api.rst  conf.py  developer.rst  index.rst  make.bat  narrative.rst
docs/narrative/: configuration.rst  developer.rst  engine.rst  introduction.rst  quickstart_example.c  scep.rst  usage.rst
src/: CMakeLists.txt  Makefile.am  Makefile.in  configuration.c  message.c  message_static_functions.c  operation.c  scep-client-util.c  scep-client.c  scep-client.h  scep.c  scep.h  scep.h.in  util.c
src/clients/cli/: CMakeLists.txt  configuration.c  configuration.h  scep-client-util.c  scep-client.c  scep-client.cnf  scep-client.h
src/clients/perl/Crypt-LibSCEP/: LibSCEP.xs  MYMETA.json  MYMETA.yml  Makefile  Makefile.PL  README  Readme.md  config.h  helperfunctions.c  helperfunctions.h  test  typemap
src/clients/perl/Crypt-LibSCEP/lib/Crypt/: LibSCEP.pm
src/clients/perl/Crypt-LibSCEP/t/: Crypt-LibSCEP.t
src/clients/python/: setup.py
src/clients/python/bindings/: scep.c
src/clients/python/scep/: __init__.py  client.py
tests/: CMakeLists.txt  Makefile.am  Makefile.in  scep_tests.h  scep_tests.h.in  test_configuration.c  test_message.c  test_message_certrep.c  test_message_common.c  test_message_get_cert.c  test_message_get_cert_initial.c  test_message_get_crl.c  test_message_helper.c  test_message_pkcsreq.c  test_operation.c  test_scep.c  test_util.c
tests/scripts/: build_botan.sh  build_engine_pkcs11.sh  build_libp11.sh  build_softhsm.sh
tests/test-files/: test-1-csr.pem  test-1-key.pem  test-2-csr.pem  test-2-key.pem  util_b64_pkcs7.pem
